--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
 <title>hello coursera!</title>
 </head>
 <body>
-<h1>HELLO COURSERA!</h1>
+<h1>HELLO COURSERA! its a grade course</h1>
 </body>
 </html>
